fix #85: Align default text content of the extension to not move when filters are opened. (#127)

--- a/src/popup/sass/layout/_main.scss
+++ b/src/popup/sass/layout/_main.scss
@@ -1,11 +1,13 @@
 .section-content {
-  
+
   .initial-info {
     min-height: 14.3rem;
     width: 90%;
     margin: 0 auto;
     text-align: center;
     padding-top: 3rem;
+    top: 11rem;
+    position: absolute;
   }
 
   .no-more-images-mes {
